# bijective-projection-shell

./: .gitignore  .travis.xml  CMakeLists.txt  FigureScripts.md  README.md
.github/workflows/: cmake.yml
cmake/: PrismDependencies.cmake  PrismDownloadExternal.cmake
src/: construct_shell.cpp  correspondence.cpp  main.cpp  remesh_section_in_shell.cpp
src/prism/: PrismCage.cpp  PrismCage.hpp  bevel_utils.cpp  bevel_utils.hpp  cage_check.cpp  cage_check.hpp  cage_utils.cpp  cage_utils.hpp  common.hpp  extraction.cpp  extraction.hpp  feature_utils.cpp  feature_utils.hpp
src/prism/cgal/: tetrahedron_tetrahedron_intersection.cpp  tetrahedron_tetrahedron_intersection.hpp  triangle_tetrahedron_intersection.hpp  triangle_triangle_intersection.cpp  triangle_triangle_intersection.hpp
src/prism/energy/: map_distortion.cpp  prism_quality.cpp  prism_quality.hpp  smoother_pillar.cpp
src/prism/geogram/: AABB.cpp  AABB.hpp  geogram_utils.cpp
src/prism/local_operations/: collapse_pass.cpp  mesh_coloring.hpp  remesh_pass.cpp  remesh_pass.hpp  remesh_pass_collapse.cpp  retain_triangle_adjacency.cpp  retain_triangle_adjacency.hpp  section_remesh.cpp  section_remesh.hpp  smooth_pass.cpp  validity_checks.cpp  validity_checks.hpp
src/prism/phong/: projection.cpp  projection.hpp  query_correspondence.cpp  query_correspondence.hpp  tangent_orientation.cpp
src/prism/predicates/: inside_octahedron.cpp  inside_octahedron.hpp  inside_prism_tetra.cpp  positive_prism_volume_12.cpp  positive_prism_volume_12.hpp  triangle_triangle_intersection.cpp
src/prism/singularity/: trim.cpp  trim.hpp
src/prism/spatial-hash/: AABB_hash.cpp  AABB_hash.hpp  self_intersection.hpp
src/seism/: decimate_w_feature.cpp  partial_matchmaker.cpp  slim_with_fixed.cpp  slim_with_fixed.h  util.cpp  util.h
tests/: CMakeLists.txt  cgal_qp.cpp  clean_extraction.cpp  curve_fitting.cpp  doo_sabin.cpp  feature_parse.cpp  find_project_pillar.cpp  flow_continuation.cpp  freeze_saddle.cpp  heat_geodesic.cpp  phong.cpp  predicates.cpp  qslim.cpp  qslim_shell.cpp  remesh_shell.cpp  spatial_hash.cpp  tangential_smooth_bin.cpp  test_common.hpp  test_main.cpp  wire_mesh.cpp
